# ExplainThisRepo

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  INIT.md  Makefile  README.md  REFACTOR_SUMMARY.md  SECURITY.md  _version.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-binaries.yml
apps/: page.tsx
apps/web/: .gitignore  TESTIMONIALS.md  globals.css  index.html  layout.tsx  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  robots.txt  tsconfig.json
apps/web/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  trace
apps/web/.next/cache/: .previewinfo  .rscinfo
apps/web/.next/cache/webpack/client-production/: 1.pack  2.pack  4.pack  index.pack  index.pack.old
apps/web/.next/cache/webpack/edge-server-production/: index.pack
apps/web/.next/cache/webpack/server-production/: 1.pack  3.pack  index.pack  index.pack.old
apps/web/.next/server/: middleware-build-manifest.js  server-reference-manifest.json
apps/web/.next/server/app/: _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
apps/web/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
apps/web/.next/server/chunks/: 778.js
apps/web/.next/server/pages/: 404.html  500.html
apps/web/.next/static/chunks/: main-app-8eb46753dc23f1c4.js
apps/web/.next/static/chunks/app/: layout-67073efbdfc91d44.js  page-a15ed2e793e178a9.js
apps/web/.next/static/chunks/app/_not-found/: page-1f05089b8965aae6.js
apps/web/.next/static/css/: a543dd1da7f8876b.css
apps/web/.next/types/app/: layout.ts  page.ts
apps/web/app/: CopyCommand.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/[owner]/[repo]/: page.tsx
apps/web/components/: cli-flags.tsx  code-block.tsx  configuration.tsx  contributors.tsx  cta.tsx  doc-search.tsx  doc-section.tsx  docs-sections.tsx  downloads.tsx  features.tsx  footer.tsx  github-token.tsx  hero.tsx  input-formats.tsx  install.tsx  modes.tsx  more-features.tsx  navbar.tsx  platform-support.tsx  terminal-demo.tsx  testimonials.tsx
apps/web/lib/: search-index.ts
apps/web/public/: docs.html  index.html  landing.html  script.js  sitemap.xml  styles.css
apps/web/public/docs/: index.html
apps/web/types/: twitter.d.ts
docs/: GITHUB_TOKEN.md  INSTALLATION.md  TERMUX.md
dotnet_version/: ExplainThisRepo.csproj  Program.cs
explain_this/: cli.py  generate.py
explain_this_repo/: agent.py  cli.py  config.py  file_reader.py  generate.py  github.py  init.py  local_reader.py  prompt.py  prompts.py  repo_reader.py  stack_detector.py  stack_printer.py  tools.py  writer.py
explain_this_repo/providers/: README.md  __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai.py  openrouter.py  registry.py
node_version/: .gitignore  .prettierignore  README.md  cli.ts  config.ts  generate.ts  github.ts  init.ts  local_reader.ts  package-lock.json  package.json  prompt.ts  repo_reader.ts  stack-detector.ts  stack_printer.ts  tsconfig.json  writer.ts
node_version/providers/: README.md  anthropic.ts  base.ts  gemini.ts  groq.ts  ollama.ts  openai.ts  openrouter.ts  registry.ts
tests/: conftest.py  test_council.py  test_features.py  test_integration.py
