[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "explainthisrepo"
version = "0.4.0"
description = "ExplainThisRepo is a CLI developer tool to quickly explain GitHub repository in plain English"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Caleb Wodi", email = "calebwodi33@gmail.com" }
]

dependencies = [
  "requests"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]

[tool.setuptools]
packages = ["explain_this_repo"]

[project.urls]
Homepage = "https://github.com/calchiwo/ExplainThisRepo"
Repository = "https://github.com/calchiwo/ExplainThisRepo.git"
"Stars" = "https://github.com/calchiwo/ExplainThisRepo/stargazers"
"Bug tracker" = "https://github.com/calchiwo/ExplainThisRepo/issues"

[project.scripts]
explainthisrepo = "explain_this_repo.cli:main"